GUACAMOLE-724: Correct unreadable error coloring of new client-specific modals.

--- a/guacamole/src/main/frontend/src/app/client/styles/notification.css
+++ b/guacamole/src/main/frontend/src/app/client/styles/notification.css
@@ -48,6 +48,10 @@
     border: none;
 }
 
+.client-status-modal .notification.error {
+    background: rgba(255, 0, 0, 0.44);
+}
+
 .client-status-modal .notification .title-bar {
     display: none
 }
